# py-clipboard

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_clipboard/: __init__.py  __main__.py
tests/: test_import.py
