[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-clipboard"
version = "0.1.6"
description = "Cross-platform clipboard copy and paste in one function call"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["clipboard", "copy", "paste", "cross-platform", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-clipboard#readme"
Repository = "https://github.com/philiprehberger/py-clipboard"
Issues = "https://github.com/philiprehberger/py-clipboard/issues"
Changelog = "https://github.com/philiprehberger/py-clipboard/blob/main/CHANGELOG.md"

[project.scripts]
clipboard = "philiprehberger_clipboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_clipboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
